--- a/index.html
+++ b/index.html
@@ -2814,6 +2814,16 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="datasets">Datasets</h3>
 
 <ul>
+<li><strong>Job Shop Scheduling</strong>
+
+<ul>
+<li><a href="http://mistic.heig-vd.ch/taillard/problemes.dir/ordonnancement.dir/ordonnancement.html">Taillard&rsquo;s benchmark datasets</a></li>
+</ul></li>
+<li><strong>Flexible Job Shop Scheduling</strong>
+
+<ul>
+<li><a href="http://people.idsia.ch/~monaldo/fjsp.html">Flexible Job Shop Scheduling datasets</a></li>
+</ul></li>
 <li><strong>Capacitated Arc Routing Problem</strong>
 
 <ul>
@@ -2823,13 +2833,17 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li>The <a href="files/data/carp/EGL-G.zip">EGL-G</a> dataset: <em>2 groups of large instances (~250 nodes and ~400 required edges). Each group contains 5 instances (denoted as A, B, C, D, E), based on the same graph and required edges, but with different vehicle capacity.</em></li>
 <li><a href="files/data/carp/Instances.zip">Large scale datasets</a>, and the <a href="files/data/carp/results.zip">best solutions</a> we found.</li>
 </ul></li>
-<li><strong>Vehicle Routing Problems</strong>:
+<li><strong>Vehicle Routing Problems</strong>
 
 <ul>
 <li>Benchmark instances for different problem variants can be found from <a href="https://w1.cirrelt.ca/~vidalt/en/VRP-resources.html">Dr. T. Vidal&rsquo;s page</a>.</li>
 <li>A very good <a href="http://vrp.atd-lab.inf.puc-rio.br/index.php/en">CVRP library</a>, with the <a href="http://vrp.atd-lab.inf.puc-rio.br/index.php/en/plotted-instances">plots of instances and solutions</a>.</li>
 </ul></li>
-<li><strong>Bin Packing Problem</strong>: a very comprehensive <a href="http://or.dei.unibo.it/library/bpplib">problem library</a>.</li>
+<li><strong>Bin Packing Problem</strong>
+
+<ul>
+<li>A very comprehensive <a href="http://or.dei.unibo.it/library/bpplib">problem library</a>.</li>
+</ul></li>
 <li><strong>Timetabling Problem</strong>
 
 <ul>
