--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jia2020contribution">1</a>]
+[<a name="zhang2020divide">1</a>]
+</td>
+<td class="bibtexitem">
+Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
+ Divide-and-conquer large scale capacitated arc routing problems with
+  route cutting off decomposition.
+ <em>Information Sciences</em>, nov 2020.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2020divide">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="jia2020contribution">2</a>]
 </td>
 <td class="bibtexitem">
 Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -34,7 +50,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020evolving">2</a>]
+[<a name="zhang2020evolving">3</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -50,7 +66,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020adaptive">3</a>]
+[<a name="costa2020adaptive">4</a>]
 </td>
 <td class="bibtexitem">
 Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -67,7 +83,7 @@ Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2020towards">4</a>]
+[<a name="wang2020towards">5</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -85,7 +101,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020gphh">5</a>]
+[<a name="ardeh2020gphh">6</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -102,7 +118,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020diversity">6</a>]
+[<a name="ardeh2020diversity">7</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -119,7 +135,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020parametric">7</a>]
+[<a name="ardeh2020parametric">8</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -136,7 +152,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">8</a>]
+[<a name="tan2020cooperative">9</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
