--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="jia2020contribution"></a><pre>
+<h1>publication-accepted.bib</h1><a name="zhang2020divide"></a><pre>
+@article{<a href="publication-accepted.html#zhang2020divide">zhang2020divide</a>,
+  title = {Divide-and-Conquer Large Scale Capacitated Arc Routing Problems with Route Cutting Off Decomposition},
+  author = {Zhang, Yuzhou and Mei, Yi and Zhang, Buzhong and Jiang, Keqin},
+  journal = {Information Sciences},
+  month = {nov},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {Elsevier},
+  doi = {}
+}
+</pre>
+
+<a name="jia2020contribution"></a><pre>
 @article{<a href="publication-accepted.html#jia2020contribution">jia2020contribution</a>,
   title = {Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents},
   author = {Jia, Yahui and Mei, Yi and Zhang, Mengjie},
