--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/zhang-2020-divide/">Divide-and-Conquer Large Scale Capacitated Arc Routing Problems with Route Cutting Off Decomposition</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/ardeh-2020-gphh/">A GPHH with Surrogate-assisted Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/jia-2020-contribution/">Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/ardeh-2020-diversity/">Diversity-driven Knowledge Transfer for GPHH to Solve Uncertain Capacited Arc Routing Problem</a></li>
   </ul>
   
   
