--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020divide">1</a>]
+[<a name="zhang2020surrogate">1</a>]
+</td>
+<td class="bibtexitem">
+Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Mengjie Zhang, and Kay&nbsp;Chen Tan.
+ Surrogate-assisted evolutionary multitasking genetic programming for
+  dynamic flexible job shop scheduling.
+ <em>IEEE Transactions on Evolutionary Computation</em>, nov 2020.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2020surrogate">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2020divide">2</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
@@ -34,7 +50,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jia2020contribution">2</a>]
+[<a name="jia2020contribution">3</a>]
 </td>
 <td class="bibtexitem">
 Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -50,7 +66,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020evolving">3</a>]
+[<a name="zhang2020evolving">4</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -66,7 +82,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020adaptive">4</a>]
+[<a name="costa2020adaptive">5</a>]
 </td>
 <td class="bibtexitem">
 Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -83,7 +99,7 @@ Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2020towards">5</a>]
+[<a name="wang2020towards">6</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -101,7 +117,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020gphh">6</a>]
+[<a name="ardeh2020gphh">7</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -118,7 +134,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020diversity">7</a>]
+[<a name="ardeh2020diversity">8</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -135,7 +151,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020parametric">8</a>]
+[<a name="ardeh2020parametric">9</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -152,7 +168,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">9</a>]
+[<a name="tan2020cooperative">10</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
