--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,23 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="zhang2020divide"></a><pre>
+<h1>publication-accepted.bib</h1><a name="zhang2020surrogate"></a><pre>
+@article{<a href="publication-accepted.html#zhang2020surrogate">zhang2020surrogate</a>,
+  title = {Surrogate-Assisted Evolutionary Multitasking Genetic Programming for Dynamic Flexible
+Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie and Tan, Kay Chen},
+  journal = {IEEE Transactions on Evolutionary Computation},
+  month = {nov},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2020divide"></a><pre>
 @article{<a href="publication-accepted.html#zhang2020divide">zhang2020divide</a>,
   title = {Divide-and-Conquer Large Scale Capacitated Arc Routing Problems with Route Cutting Off Decomposition},
   author = {Zhang, Yuzhou and Mei, Yi and Zhang, Buzhong and Jiang, Keqin},
