--- a/404.html
+++ b/404.html
@@ -398,6 +398,10 @@
   </ul>
   
   <ul>
+    <li><a href="/publication/zhang-2020-surrogate/">Surrogate-Assisted Evolutionary Multitasking Genetic Programming for Dynamic FlexibleJob Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/ardeh-2020-gphh/">A GPHH with Surrogate-assisted Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/costa-2020-adaptive/">Adaptive Search Space through Evolutionary Hyper-Heuristics for the Large-Scale Vehicle Routing Problem</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/jia-2020-contribution/">Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents</a></li>
   </ul>
   
   
