--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -42,7 +42,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
   route cutting off decomposition.
  <em>Information Sciences</em>, nov 2020.
 [&nbsp;<a href="publication-accepted_bib.html#zhang2020divide">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1016/j.ins.2020.11.011">DOI</a>&nbsp;]
 
 </td>
 </tr>
