--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -34,7 +34,7 @@ Job Shop Scheduling},
   number = {},
   pages = {},
   publisher = {Elsevier},
-  doi = {}
+  doi = {10.1016/j.ins.2020.11.011}
 }
 </pre>
 
