--- a/index.html
+++ b/index.html
@@ -2083,6 +2083,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1016/j.ins.2020.11.011" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
     </div>
