--- a/publication/index.html
+++ b/publication/index.html
@@ -1088,6 +1088,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1016/j.ins.2020.11.011" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
