--- a/publication/zhang-2020-divide/index.html
+++ b/publication/zhang-2020-divide/index.html
@@ -585,6 +585,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1016/j.ins.2020.11.011" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
