--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="zhang2020surrogate"></a><pre>
+<h1>publication-accepted.bib</h1><a name="zhang2020route"></a><pre>
+@article{<a href="publication-accepted.html#zhang2020route">zhang2020route</a>,
+  title = {A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem},
+  author = {Zhang, Yuzhou and Mei, Yi and Huang, Shihua and Zheng, Xin and Zhang, Cuijuan},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {dec},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2020surrogate"></a><pre>
 @article{<a href="publication-accepted.html#zhang2020surrogate">zhang2020surrogate</a>,
   title = {Surrogate-Assisted Evolutionary Multitasking Genetic Programming for Dynamic Flexible
 Job Shop Scheduling},
