--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/zhang-2020-route/">A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2020-divide/">Divide-and-Conquer Large Scale Capacitated Arc Routing Problems with Route Cutting Off Decomposition</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/ardeh-2020-parametric/">A Parametric Pipeline Framework for Genetic Programming Transfer Learning in the Uncertain Capacitated Arc Routing Problem</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/costa-2020-adaptive/">Adaptive Search Space through Evolutionary Hyper-Heuristics for the Large-Scale Vehicle Routing Problem</a></li>
   </ul>
   
   
