--- a/404.html
+++ b/404.html
@@ -398,6 +398,10 @@
   </ul>
   
   <ul>
+    <li><a href="/publication/gao-2020-adaptive/">Adaptive Coordination Ant Colony Optimisation for Multi-Point Dynamic Aggregation</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2020-divide/">Divide-and-Conquer Large Scale Capacitated Arc Routing Problems with Route Cutting Off Decomposition</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/ardeh-2020-gphh/">A GPHH with Surrogate-assisted Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/ardeh-2020-parametric/">A Parametric Pipeline Framework for Genetic Programming Transfer Learning in the Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
   
