--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -22,6 +22,21 @@
 }
 </pre>
 
+<a name="gao2020adaptive"></a><pre>
+@article{<a href="publication-accepted.html#gao2020adaptive">gao2020adaptive</a>,
+  title = {Adaptive Coordination Ant Colony Optimisation for Multi-Point Dynamic Aggregation},
+  author = {Gao, Guanqiang and Mei, Yi and Jia, Yahui and Browne, Will and Xin, Bin},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {dec},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
 <a name="zhang2020surrogate"></a><pre>
 @article{<a href="publication-accepted.html#zhang2020surrogate">zhang2020surrogate</a>,
   title = {Surrogate-Assisted Evolutionary Multitasking Genetic Programming for Dynamic Flexible
