--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2020/12/02, 2020/11/25, SSCI practice 2020/11/18, Guanqiang Gao, genetic programming for dynamic multi-robot path planning 2020/11/11, Shaolin Wang, practice on proposal 2020/11/04, Kirita-Rose Escott, practice on proposal 2020/10/28, Shaolin Wang, practice on proposal 2020/10/21, Taiwo Akindele, resource allocation methods for container-based clouds 2020/10/14, Shaolin Wang, practice on proposal 2020/10/07, Kirita-Rose Escott, proposal practice 2020/09/30, Fangfang Zhang, phenotypic characterisation for scheduling dispatching rules, based on the paper &ldquo;On Using Surrogates with Genetic Programming&rdquo;, Evolutionary Computation, vol.">
+  <meta name="description" content="2020/12/16, Kirita-Rose Escott, practice on proposal 2020/12/09, Yahui Jia, a general introduction to meta-heuristic algorithms 2020/12/02, Shaolin Wang, practice on proposal 2020/11/25, SSCI practice: Shaolin Wang, Mazhar Anzari Ardeh, Mazhar Anzari Ardeh, Kirita-Rose Escott 2020/11/18, Guanqiang Gao, genetic programming for dynamic multi-robot path planning 2020/11/11, Shaolin Wang, practice on proposal 2020/11/04, Kirita-Rose Escott, practice on proposal 2020/10/28, Shaolin Wang, practice on proposal 2020/10/21, Taiwo Akindele, resource allocation methods for container-based clouds 2020/10/14, Shaolin Wang, practice on proposal 2020/10/07, Kirita-Rose Escott, proposal practice 2020/09/30, Fangfang Zhang, phenotypic characterisation for scheduling dispatching rules, based on the paper &ldquo;On Using Surrogates with Genetic Programming&rdquo;, Evolutionary Computation, vol.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2020/12/02, 2020/11/25, SSCI practice 2020/11/18, Guanqiang Gao, genetic programming for dynamic multi-robot path planning 2020/11/11, Shaolin Wang, practice on proposal 2020/11/04, Kirita-Rose Escott, practice on proposal 2020/10/28, Shaolin Wang, practice on proposal 2020/10/21, Taiwo Akindele, resource allocation methods for container-based clouds 2020/10/14, Shaolin Wang, practice on proposal 2020/10/07, Kirita-Rose Escott, proposal practice 2020/09/30, Fangfang Zhang, phenotypic characterisation for scheduling dispatching rules, based on the paper &ldquo;On Using Surrogates with Genetic Programming&rdquo;, Evolutionary Computation, vol."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2020/12/16, Kirita-Rose Escott, practice on proposal 2020/12/09, Yahui Jia, a general introduction to meta-heuristic algorithms 2020/12/02, Shaolin Wang, practice on proposal 2020/11/25, SSCI practice: Shaolin Wang, Mazhar Anzari Ardeh, Mazhar Anzari Ardeh, Kirita-Rose Escott 2020/11/18, Guanqiang Gao, genetic programming for dynamic multi-robot path planning 2020/11/11, Shaolin Wang, practice on proposal 2020/11/04, Kirita-Rose Escott, practice on proposal 2020/10/28, Shaolin Wang, practice on proposal 2020/10/21, Taiwo Akindele, resource allocation methods for container-based clouds 2020/10/14, Shaolin Wang, practice on proposal 2020/10/07, Kirita-Rose Escott, proposal practice 2020/09/30, Fangfang Zhang, phenotypic characterisation for scheduling dispatching rules, based on the paper &ldquo;On Using Surrogates with Genetic Programming&rdquo;, Evolutionary Computation, vol."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,8 +503,10 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
-<li>2020/12/02,</li>
-<li>2020/11/25, SSCI practice</li>
+<li>2020/12/16, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, practice on proposal</li>
+<li>2020/12/09, <strong><a href="https://ecs.victoria.ac.nz/Main/YahuiJia">Yahui Jia</a></strong>, a general introduction to meta-heuristic algorithms</li>
+<li>2020/12/02, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, practice on proposal</li>
+<li>2020/11/25, SSCI practice: <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong></li>
 <li>2020/11/18, <strong>Guanqiang Gao</strong>, genetic programming for dynamic multi-robot path planning</li>
 <li>2020/11/11, <strong><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></strong>, practice on proposal</li>
 <li>2020/11/04, <strong><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></strong>, practice on proposal</li>
