--- a/ecco/index.html
+++ b/ecco/index.html
@@ -532,26 +532,27 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.wgtn.ac.nz/Main/GradTaiwoAdeyemiAkindele">Taiwo Akindele</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></li>
-<li>Yifan Chen</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></li>
 <li>Guanqiang Gao</li>
-<li><a href="https://www.victoria.ac.nz/architecture/research/current-phd-research/harry-yi-he">Harry He</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></li>
-<li>Zhixing Huang</li>
+<li><a href="https://ecs.wgtn.ac.nz/Main/GradZhixingHuang">Zhixing Huang</a></li>
+<li><a href="https://ecs.wgtn.ac.nz/Main/GradMohammodSazidZamanKhan">Sazid Khan</a></li>
 <li>Jordan MacLaclan</li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></li>
 <li><a href="https://www.victoria.ac.nz/som/research/phd/mgmt/amirhossein-mostofi">Amirhossein Mostofi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></li>
-<li>Meng Xu</li>
+<li><a href="https://ecs.wgtn.ac.nz/Main/GradMengXu">Meng Xu</a></li>
+<li><a href="https://ecs.wgtn.ac.nz/Main/GradYifanYang">Yifan Yang</a></li>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
 </ul>
 
 <h4 id="alumni">Alumni</h4>
 
 <ul>
+<li><a href="https://www.victoria.ac.nz/architecture/research/current-phd-research/harry-yi-he">Harry He</a> (Graduated in 2020)</li>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a> (Graduated in 2020)</li>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a> (Graduated in 2020)</li>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a> (Graduated in 2020)</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a> (Graduated in 2020)</li>
 <li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019)</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park (Graduated in 2019)</a></li>
