--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -68,6 +68,21 @@ Job Shop Scheduling},
 }
 </pre>
 
+<a name="li2020divide"></a><pre>
+@article{<a href="publication-accepted.html#li2020divide">li2020divide</a>,
+  title = {Cooperative coevolution for large-scale global optimization based on fuzzy decomposition},
+  author = {Li, Lin and Fang, Wei and Mei, Yi and Wang, Quan},
+  journal = {Soft Computing},
+  month = {nov},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {Springer},
+  doi = {10.1007/s00500-020-05389-3}
+}
+</pre>
+
 <a name="jia2020contribution"></a><pre>
 @article{<a href="publication-accepted.html#jia2020contribution">jia2020contribution</a>,
   title = {Contribution-based Cooperative Co-evolution for Non-separable Large-scale Problems with Overlapping Subcomponents},
