--- a/404.html
+++ b/404.html
@@ -402,15 +402,15 @@
   </ul>
   
   <ul>
+    <li><a href="/publication/li-2020-divide/">Cooperative coevolution for large-scale global optimization based on fuzzy decomposition</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2020-divide/">Divide-and-Conquer Large Scale Capacitated Arc Routing Problems with Route Cutting Off Decomposition</a></li>
   </ul>
   
   <ul>
     <li><a href="/publication/zhang-2020-surrogate/">Surrogate-Assisted Evolutionary Multitasking Genetic Programming for Dynamic FlexibleJob Shop Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/ardeh-2020-gphh/">A GPHH with Surrogate-assisted Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
   </ul>
   
   
