--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/zhang-2021-collaborative/">Collaborative Multi-fidelity based Surrogate Models for Genetic Programming in Dynamic Flexible Job Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2020-route/">A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/zhang-2020-divide/">Divide-and-Conquer Large Scale Capacitated Arc Routing Problems with Route Cutting Off Decomposition</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2020-surrogate/">Surrogate-Assisted Evolutionary Multitasking Genetic Programming for Dynamic FlexibleJob Shop Scheduling</a></li>
   </ul>
   
   
