--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020route">1</a>]
+[<a name="zhang2021collaborative">1</a>]
+</td>
+<td class="bibtexitem">
+Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
+ Collaborative multi-fidelity based surrogate models for genetic
+  programming in dynamic flexible job shop scheduling.
+ <em>IEEE Transactions on Cybernetics</em>, jan 2021.
+[&nbsp;<a href="publication-accepted_bib.html#zhang2021collaborative">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2020route">2</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Shihua Huang, Xin Zheng, and Cuijuan Zhang.
@@ -34,7 +50,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Shihua Huang, Xin Zheng, and Cuijuan Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="gao2020adaptive">2</a>]
+[<a name="gao2020adaptive">3</a>]
 </td>
 <td class="bibtexitem">
 Guanqiang Gao, Yi&nbsp;Mei, Yahui Jia, Will Browne, and Bin Xin.
@@ -50,7 +66,7 @@ Guanqiang Gao, Yi&nbsp;Mei, Yahui Jia, Will Browne, and Bin Xin.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020surrogate">3</a>]
+[<a name="zhang2020surrogate">4</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Mengjie Zhang, and Kay&nbsp;Chen Tan.
@@ -66,7 +82,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Mengjie Zhang, and Kay&nbsp;Chen Ta
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020divide">4</a>]
+[<a name="zhang2020divide">5</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
@@ -82,7 +98,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="li2020divide">5</a>]
+[<a name="li2020divide">6</a>]
 </td>
 <td class="bibtexitem">
 Lin Li, Wei Fang, Yi&nbsp;Mei, and Quan Wang.
@@ -98,7 +114,7 @@ Lin Li, Wei Fang, Yi&nbsp;Mei, and Quan Wang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jia2020contribution">6</a>]
+[<a name="jia2020contribution">7</a>]
 </td>
 <td class="bibtexitem">
 Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -114,7 +130,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020evolving">7</a>]
+[<a name="zhang2020evolving">8</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -130,7 +146,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020adaptive">8</a>]
+[<a name="costa2020adaptive">9</a>]
 </td>
 <td class="bibtexitem">
 Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -147,7 +163,7 @@ Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2020towards">9</a>]
+[<a name="wang2020towards">10</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -165,7 +181,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020gphh">10</a>]
+[<a name="ardeh2020gphh">11</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -182,7 +198,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020diversity">11</a>]
+[<a name="ardeh2020diversity">12</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -199,7 +215,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020parametric">12</a>]
+[<a name="ardeh2020parametric">13</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -216,7 +232,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">13</a>]
+[<a name="tan2020cooperative">14</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
