--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="zhang2020route"></a><pre>
+<h1>publication-accepted.bib</h1><a name="zhang2021collaborative"></a><pre>
+@article{<a href="publication-accepted.html#zhang2021collaborative">zhang2021collaborative</a>,
+  title = {Collaborative Multi-fidelity based Surrogate Models for Genetic Programming in Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {jan},
+  year = {2021},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2020route"></a><pre>
 @article{<a href="publication-accepted.html#zhang2020route">zhang2020route</a>,
   title = {A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem},
   author = {Zhang, Yuzhou and Mei, Yi and Huang, Shihua and Zheng, Xin and Zhang, Cuijuan},
