--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -58,7 +58,7 @@ Guanqiang Gao, Yi&nbsp;Mei, Yahui Jia, Will Browne, and Bin Xin.
   aggregation.
  <em>IEEE Transactions on Cybernetics</em>, dec 2020.
 [&nbsp;<a href="publication-accepted_bib.html#gao2020adaptive">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/TCYB.2020.3042511">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -155,7 +155,7 @@ Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
  In <em>Proceedings of the IEEE Symposium Series on Computational
   Intelligence (SSCI)</em>. IEEE, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#costa2020adaptive">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/SSCI47803.2020.9308239">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -173,7 +173,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
  In <em>Proceedings of the IEEE Symposium Series on Computational
   Intelligence (SSCI)</em>. IEEE, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#wang2020towards">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/SSCI47803.2020.9308588">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -190,7 +190,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
  In <em>Proceedings of the IEEE Symposium Series on Computational
   Intelligence (SSCI)</em>. IEEE, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#ardeh2020gphh">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/SSCI47803.2020.9308398">DOI</a>&nbsp;]
 
 </td>
 </tr>
@@ -207,7 +207,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
  In <em>Proceedings of the IEEE Symposium Series on Computational
   Intelligence (SSCI)</em>. IEEE, sep 2020.
 [&nbsp;<a href="publication-accepted_bib.html#ardeh2020diversity">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/SSCI47803.2020.9308501">DOI</a>&nbsp;]
 
 </td>
 </tr>
