--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -48,7 +48,7 @@
   number = {},
   pages = {},
   publisher = {IEEE},
-  doi = {}
+  doi = {10.1109/TCYB.2020.3042511}
 }
 </pre>
 
@@ -137,7 +137,7 @@ Job Shop Scheduling},
   year = {2020},
   month = {sep},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/SSCI47803.2020.9308239}
 }
 </pre>
 
@@ -150,7 +150,7 @@ Job Shop Scheduling},
   year = {2020},
   month = {sep},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/SSCI47803.2020.9308588}
 }
 </pre>
 
@@ -163,7 +163,7 @@ Job Shop Scheduling},
   year = {2020},
   month = {sep},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/SSCI47803.2020.9308398}
 }
 </pre>
 
@@ -176,7 +176,7 @@ Job Shop Scheduling},
   year = {2020},
   month = {sep},
   organization = {IEEE},
-  doi = {}
+  doi = {10.1109/SSCI47803.2020.9308501}
 }
 </pre>
 
