--- a/publication/costa-2020-adaptive/index.html
+++ b/publication/costa-2020-adaptive/index.html
@@ -572,6 +572,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.1109/SSCI47803.2020.9308239" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
