--- a/publication/index.html
+++ b/publication/index.html
@@ -1104,6 +1104,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2020.3042511" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1611,6 +1615,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/SSCI47803.2020.9308588" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1804,6 +1812,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/SSCI47803.2020.9308501" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -1990,6 +2002,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/SSCI47803.2020.9308239" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
@@ -2167,6 +2183,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/SSCI47803.2020.9308398" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
 </p>
