--- a/index.html
+++ b/index.html
@@ -2343,6 +2343,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1109/TCYB.2020.3042511" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
     </div>
