--- a/404.html
+++ b/404.html
@@ -398,6 +398,10 @@
   </ul>
   
   <ul>
+    <li><a href="/publication/zhang-2021-correlation/">Correlation Coefficient based Recombinative Guidance for Genetic Programming Hyper-heuristics in Dynamic Flexible Job Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2020-route/">A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc RoutingProblem</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/li-2020-divide/">Cooperative coevolution for large-scale global optimization based on fuzzy decomposition</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2020-divide/">Divide-and-Conquer Large Scale Capacitated Arc Routing Problems with Route Cutting Off Decomposition</a></li>
   </ul>
   
   
