--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="zhang2021collaborative"></a><pre>
+<h1>publication-accepted.bib</h1><a name="zhang2021correlation"></a><pre>
+@article{<a href="publication-accepted.html#zhang2021correlation">zhang2021correlation</a>,
+  title = {Correlation Coefficient based Recombinative Guidance for Genetic Programming Hyper-heuristics in Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
+  journal = {IEEE Transactions on Evolutionary Computation},
+  month = {jan},
+  year = {2021},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {10.1109/TEVC.2021.3056143}
+}
+</pre>
+
+<a name="zhang2021collaborative"></a><pre>
 @article{<a href="publication-accepted.html#zhang2021collaborative">zhang2021collaborative</a>,
   title = {Collaborative Multi-fidelity based Surrogate Models for Genetic Programming in Dynamic Flexible Job Shop Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Zhang, Mengjie},
